--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Complete O'Fallon Veterinarians Guide - Compare All 15+ Animal Hospitals</title>
-    <meta name="description" content="Find the perfect veterinarian in O'Fallon, IL. Compare all 15+ animal hospitals, emergency vets, and specialty clinics with ratings, services, hours, and pricing. Your complete local guide.">
+    <title>Complete O'Fallon Veterinarians Guide - Compare All 12+ Animal Hospitals</title>
+    <meta name="description" content="Find the perfect veterinarian in O'Fallon, IL area. Compare all 12+ animal hospitals, emergency vets, and specialty clinics with ratings, services, hours, and pricing. Your complete local guide.">
     
     <!-- Font Awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -792,8 +792,8 @@
     <!-- Hero Section -->
     <section id="hero" class="hero">
         <div class="container">
-            <h2>Complete O'Fallon Veterinarians Guide - Compare All 15+ Animal Hospitals</h2>
-            <p>Find the perfect veterinarian for your pets in O'Fallon, IL. Compare all animal hospitals, emergency vets, and specialty clinics with ratings, services, hours, and pricing information.</p>
+            <h2>Complete O'Fallon Veterinarians Guide - Compare All 12+ Animal Hospitals</h2>
+            <p>Find the perfect veterinarian for your pets in the O'Fallon, IL area. Compare all animal hospitals, emergency vets, and specialty clinics with ratings, services, hours, and pricing information.</p>
             <div class="hero-buttons">
                 <a href="#comparison" class="btn btn-primary">Compare All Veterinarians</a>
                 <a href="#matcher" class="btn btn-secondary">Find My Perfect Match</a>
@@ -807,7 +807,7 @@
             <h2 style="color: var(--secondary-color); margin-bottom: 30px; text-align: center;">Looking for a Veterinarian in O'Fallon? You're Not Alone.</h2>
             <div style="max-width: 800px; margin: 0 auto; text-align: center;">
                 <p style="font-size: 1.1rem; line-height: 1.7; margin-bottom: 20px;">
-                    With 15+ veterinary practices spread across O'Fallon, Shiloh, and the surrounding Metro East areas, choosing the right veterinarian for your beloved pet can feel overwhelming.
+                    With 12+ veterinary practices spread across O'Fallon, Shiloh, and the surrounding Metro East areas, choosing the right veterinarian for your beloved pet can feel overwhelming.
                 </p>
                 <p style="font-size: 1.1rem; line-height: 1.7; margin-bottom: 20px;">
                     Maybe you've driven past Four Paws Animal Hospital on Hartman Lane wondering about their AAHA accreditation, or you've heard about emergency services but aren't sure where to go at 2 AM. Perhaps you need a vet who specializes in exotic pets, or you're dealing with a senior pet requiring specialized care like rehabilitation or pain management.
@@ -819,7 +819,7 @@
                 <!-- Stats Section -->
                 <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 30px; margin: 40px 0; text-align: center;">
                     <div style="background-color: var(--light-gray); padding: 30px 20px; border-radius: var(--border-radius);">
-                        <h3 style="font-size: 2rem; color: var(--primary-color); margin-bottom: 10px;">15+</h3>
+                        <h3 style="font-size: 2rem; color: var(--primary-color); margin-bottom: 10px;">12+</h3>
                         <p style="font-weight: 600; margin: 0;">Practices Compared</p>
                     </div>
                     <div style="background-color: var(--light-gray); padding: 30px 20px; border-radius: var(--border-radius);">
@@ -1102,7 +1102,7 @@
 
     <!-- JavaScript -->
     <script>
-        // Complete Veterinarians Data for O'Fallon Area (15+ practices)
+        // Complete Veterinarians Data for O'Fallon Area (12+ practices)
         const veterinariansData = [
           // O'Fallon Practices
           {
@@ -1668,101 +1668,6 @@
             specialDiscounts: "None Listed",
             multipleFinancing: true,
             advancedSurgery: false
-          },
-          // Emergency & Specialty Hospitals
-          {
-            id: "animal-emergency-center",
-            name: "Animal Emergency Center",
-            type: "24/7 Emergency Center",
-            practiceCategory: "emergency",
-            location: "Collinsville",
-            specialties: ["24/7 Emergency", "Critical Care", "Advanced Diagnostics", "Intensive Care"],
-            rating: 4.1,
-            reviews: 203,
-            website: "https://www.aec-animals.com/",
-            logo: "images/logos/animalemergency.jpg",
-            address: "Collinsville, IL",
-            phone: "(618) 346-1843",
-            isPremium: false,
-            services: ["24/7 Emergency Care", "Advanced Diagnostics", "Laboratory Services", "Intensive Care"],
-            specialServices: ["Primary Emergency Referral", "Sophisticated Equipment", "24/7 Availability"],
-            features: [
-              "Primary after-hours referral for many O'Fallon-area vets",
-              "Open weeknights, weekends, and all major holidays",
-              "Sophisticated diagnostic, laboratory, and therapeutic equipment",
-              "Specialized in high-level emergency medical care"
-            ],
-            amenities: [
-              "24 hours on weeknights, weekends, and holidays",
-              "Call ahead to allow staff to prepare",
-              "Advanced emergency medical equipment",
-              "Critical care specialists on staff"
-            ],
-            hours: "24/7 Emergency",
-            emergencyHours: "24/7 Emergency Services",
-            aaha: false,
-            exoticPets: false,
-            rehabilitation: false,
-            weekendHours: true,
-            emergency24: true,
-            // New financing and convenience data
-            careCredit: true,
-            otherFinancing: ["Scratchpay"],
-            paymentPlans: false,
-            wellnessPlans: false,
-            petInsurance: true,
-            sameDayAppointments: true,
-            onlineBooking: false,
-            specialDiscounts: "None Listed",
-            multipleFinancing: true,
-            advancedSurgery: true
-          },
-          {
-            id: "hawthorne-animal-hospital",
-            name: "Hawthorne Animal Hospital",
-            type: "24/7 Full-Service Hospital",
-            practiceCategory: "emergency",
-            location: "Glen Carbon",
-            specialties: ["AAHA Accredited", "24/7 Services", "Emergency Care", "Wellness Plans"],
-            rating: 4.4,
-            reviews: 156,
-            website: "https://www.hawthorneanimalhospital.com/",
-            logo: "images/logos/hawthorne.png",
-            address: "Glen Carbon, IL",
-            phone: "(618) 288-3971",
-            isPremium: false,
-            services: ["24/7 Emergency Care", "Primary Care", "Advanced Diagnostics", "Intensive Care"],
-            specialServices: ["AAHA Accreditation", "24/7 Full-Service Hospital", "Wellness Plans"],
-            features: [
-              "AAHA-accredited hospital open 24 hours a day, 365 days a year",
-              "Dual-purpose: primary care and 24/7 emergency services",
-              "Serves entire Metro East region for critical care",
-              "Easy monthly payment plans for wellness care"
-            ],
-            amenities: [
-              "Open 24 hours a day, 365 days a year",
-              "Full-service veterinary hospital",
-              "Emergency and intensive care unit",
-              "Wellness payment plans available"
-            ],
-            hours: "24/7/365",
-            emergencyHours: "24/7 Emergency Services",
-            aaha: true,
-            exoticPets: false,
-            rehabilitation: false,
-            weekendHours: true,
-            emergency24: true,
-            // New financing and convenience data
-            careCredit: true,
-            otherFinancing: ["Scratchpay"],
-            paymentPlans: false,
-            wellnessPlans: true,
-            petInsurance: true,
-            sameDayAppointments: true,
-            onlineBooking: "Call to Check",
-            specialDiscounts: "None Listed",
-            multipleFinancing: true,
-            advancedSurgery: true
           }
         ];
 
