--- a/index.html
+++ b/index.html
@@ -1066,7 +1066,8 @@
             </div>
         </div>
     </section>
-
+    <!-- Footer.js System -->
+    <script src="footer.js"></script>
     <!-- Footer -->
     <footer>
         <div class="container">
