--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <style>
         /* Global Styles - Veterinary Theme */
         :root {
-    --primary-color: #2e7d32;
-    --secondary-color: #1b5e20;
-    --accent-color: #4caf50;
+    --primary-color: #ff9800;
+    --secondary-color: #f57700;
+    --accent-color: #ffb74d;
             --light-color: #f1f8e9;
             --dark-color: #2d3748;
             --gray-color: #718096;
